Update README.md
Replace all the building instructions with centralized Google document